style: fix reward claim button contrast by adding on-tertiary color

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --color-secondary: #c5a4f8;
   --color-secondary-container: #543782;
   --color-tertiary: #e6bdff;
+  --color-on-tertiary: #1c0736;
   --color-tertiary-container: #dcacfb;
   --color-on-surface: #efdfff;
   --color-on-surface-variant: #b8a2d4;
